# tagged_unions

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
ci/: install.sh  script.sh
src/: example.rs  lib.rs
tagged_union_derive/: Cargo.toml
tagged_union_derive/src/: codegen.rs  lib.rs
