[package]
name = "tagged_union"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
description = "A Rust library for exposing Enums as C-style tagged unions."
readme = "README.md"
license = "MIT"
repository = "https://github.com/Michael-F-Bryan/tagged_unions"

[dependencies]
tagged_union_derive = { path = "./tagged_union_derive" }

[badges]
travis-ci = { repository = "Michael-F-Bryan/tagged_unions" }
appveyor = { repository = "Michael-F-Bryan/tagged_unions" }

[features]
default = []
example = []

[workspace]
