[package]
name = "tagged_union_derive"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]

[dependencies]
syn = { version = "0.11.11", features = ["full", "parsing"] }
quote = "0.3.15"
failure = "0.1.1"
failure_derive = "0.1.1"

[lib]
name = "tagged_union_derive"
proc_macro = true
